Revert "Dev/refactor"

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,3 +1,4 @@
+@use './scss/slider_hero';
 * {
   box-sizing: border-box;
 }
@@ -86,7 +87,8 @@ html[data-theme='dark'] {
   src: url('/fonts/Mont-Regular.otf') format('opentype');
 }
 .main {
-  width: 100%;
+  max-width: var(--max-width);
+  margin-inline: auto;
   min-height: calc(100vh - 254px - 48px);
   padding-inline: 16px;
   padding-top: 24px;
@@ -104,17 +106,6 @@ html[data-theme='dark'] {
     padding-bottom: 80px;
   }
 }
-.section {
-  max-width: var(--max-width);
-  margin-inline: auto;
-  padding-inline: 16px;
-  @media screen and (min-width: 640px) {
-    padding-inline: 24px;
-  }
-  @media screen and (min-width: 1200px) {
-    padding-inline: 32px;
-  }
-}
 .main-heading {
   color: var(--text-clr);
   font-family: 'Mont-Bold', sans-serif;
@@ -128,7 +119,7 @@ html[data-theme='dark'] {
     font-size: 3rem;
   }
 }
-.section:not(:first-child):not(:last-child){
+.section:not(:last-child) {
   margin-bottom: 56px;
   @media screen and (min-width: 640px) {
     margin-bottom: 64px;
