--- a/app/components/ui/SliderHero/SliderHero.module.scss
+++ b/app/components/ui/SliderHero/SliderHero.module.scss
@@ -1,24 +1,3 @@
-.main-slider-hero {
-  .slide-slider-content {
-    position: relative;
-  }
-}
-.flex-pag-slider {
-  padding-top: 18px;
-  display: flex;
-  gap: 9px;
-  button {
-    width: 14px;
-    height: 4px;
-    border: none;
-    &.active-pag-btn {
-      background: var(--gray-primary);
-    }
-    &.def-pag-btn {
-      background: var(--border-clr);
-    }
-  }
-}
 .container_slider {
   max-width: 100%;
   width: 100%;
@@ -47,4 +26,6 @@
   padding: 0 var(--def-pad);
   display: flex;
   justify-content: center;
+}
+.button {
 }
